[FEAT] cooking contents 내용 없을시 처리 추가
- textarea input event로 내용 있을시에만 .disabled 제거
- .disabled pointer event none 처리

--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -19,7 +19,7 @@ block content
                 div.input-form__input.flex
                     textarea(name="cookieContents", rows="5", cols="60").input-form__text
                 
-                button(type='submit').input-form__submit 쿠키 굽기
+                button(type='submit').input-form__submit.disabled 쿠키 굽기
 
         div.flex.input-form__result__modal.hidden.margin7
             img(src='images/cookie.png', alt='cookie').input-form__result__cookie
