[FEAT] 쿠키 날아가는 소리 추가
swipe-whoosh.mp3 추가
hot, mild pug에 audio 추가
newButton 클릭 시 소리 나게 수정

--- a/views/hot.pug
+++ b/views/hot.pug
@@ -19,6 +19,7 @@ block content
                         .numbers
             button(type="button")#flip.front.small
         audio(id='cookie-sound' src="/sounds/cookie.mp3") 
+        audio(id='swipe-sound' src="/sounds/swipe-whoosh.mp3") 
         .button-wrapper
             button#new(type="button") 새로 뽑기
             form(action="/" method="get")
