--- a/views/mild.pug
+++ b/views/mild.pug
@@ -19,6 +19,7 @@ block content
                         .numbers
             button(type="button")#flip.front.small
         audio(id='cookie-sound' src="/sounds/cookie.mp3") 
+        audio(id='swipe-sound' src="/sounds/swipe-whoosh.mp3") 
         .button-wrapper
             button#new(type="button") 새로 뽑기
             form(action="/" method="get")
