--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -3,6 +3,10 @@ extends layout
 block content
     body.input-form__font-size.flex
         div.input-form.flex.relative.margin6
+            div.cooking__title
+                p 쿠키 굽기
+            div.cooking__subtitle
+                p 아래에 원하는 메시지를 작성해주세요!
             div
                 label.input-form__check
                     input(name='mild', id='c1', type='checkbox', value='1', checked=true)
