--- a/public/stylesheets/pages/fortune.css
+++ b/public/stylesheets/pages/fortune.css
@@ -1,5 +1,20 @@
+.fortune__title {
+    position: absolute;
+    top: 250px;
+    font-size: 50px;
+    font-weight: 600;
+    font-family: "swgi";
+}
+
+.fortune__subtitle {
+    position: absolute;
+    top: 350px;
+    font-size: 25px;
+    font-family: "swgi";
+}
+
 .fortune__body {
-    margin-top: 100px;
+    margin-top: 200px;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
 }
