[FIX] 쿠키 굽기 글자수 제한 150자
cooking.pug의 24번째 줄의 maxlength를 150으로 설정

--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -21,7 +21,7 @@ block content
             
             div.flex          
                 div.input-form__input.flex
-                    textarea(name="cookieContents", rows="5", cols="60").input-form__text
+                    textarea(name="cookieContents", rows="5", cols="60", maxlength="150").input-form__text
                 
                 button(type='submit').input-form__submit.disabled 쿠키 굽기
 
